# pi_calc

./: .gitignore  Cargo.toml  Dockerfile  README.md  bench.sh  handle_docker.sh  run_remote_docker.sh  upload_docker.sh
benches/: pi_calc_benchmark.rs  pi_calculation.rs
src/: big_num.rs  calc.rs  factorial_calculator.rs  lib.rs  main  main.rs  series.rs  utils.rs
