[package]
name = "parallel_taylor_series_test"
version = "0.1.0"
authors = ["Nikolay Danailov <frostblooded@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rug = "1.8.0"
criterion = "0.3.1"
num_cpus = "1.12.0"
threadpool = "1.7.1"

[[bench]]
name = "pi_calc_benchmark"
harness = false