[package]
name = "pi_calc"
version = "1.0.0"
authors = ["Nikolay Danailov <frostblooded@yahoo.com>"]
edition = "2018"

[dependencies]
log = "0.4.8"
simple_logger = "1.6.0"
clap = "2.33.0"
rug = "1.8.0"
criterion = "0.3.1"
crossbeam-channel = "0.4.2"

[[bench]]
name = "pi_calc_benchmark"
harness = false